{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 35,
  "lineage": "f0e9e984-87ff-7b01-8600-39e8379ad909",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561885755604:vpc/vpc-06d6802b7d59168f6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-048386725969e91fc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bf3429b4faf1af6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d6802b7d59168f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b5562e55e2ef832f",
            "owner_id": "561885755604"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561885755604:security-group/sg-05120938f95a87f54",
            "description": "Security group for Docker instance running student records app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05120938f95a87f54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for application",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "student-records-docker-instance-sg",
            "name_prefix": "",
            "owner_id": "561885755604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "student-records-docker-instance-sg",
              "Phase": "4",
              "Project": "StudentRecords"
            },
            "tags_all": {
              "Name": "student-records-docker-instance-sg",
              "Phase": "4",
              "Project": "StudentRecords"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d6802b7d59168f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561885755604:security-group/sg-066eae2b465117dfa",
            "description": "Security group for RDS MySQL database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066eae2b465117dfa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from Docker instance",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05120938f95a87f54"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "student-records-rds-mysql-sg-phase4",
            "name_prefix": "",
            "owner_id": "561885755604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "student-records-rds-mysql-sg-phase4",
              "Phase": "4",
              "Project": "StudentRecords"
            },
            "tags_all": {
              "Name": "student-records-rds-mysql-sg-phase4",
              "Phase": "4",
              "Project": "StudentRecords"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d6802b7d59168f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.docker_instance",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}